@@ -273,7 +273,7 @@ and-fg,32, $fg42, $fg42, $fg42, $fg42, $fg42, $fg42
 !sb-patterns,5, 2,7, 2,7, 2,7, 2,7, 3,12, 3,12
 !sb-patterns,6, 3,11, 4,14, 3,11, 4,14, 3,11, 4,14
 !sb-patterns,7, 4,16, 4,16, 4,16, 4,16, 4,16, 4,16
-!sb-patterns,9, 3,13, 3,13, 4,17, 4,17, 5,21, 5,21
+!sb-patterns,9, 3,12, 3,12, 4,17, 4,17, 5,21, 5,21
 !sb-patterns,10, 2,6, 2,6, 2,6, 2,6, 2,6, 2,6
 !sb-patterns,11, 1,0, 1,0, 1,0, 1,0, 1,0, 1,0
 !sb-patterns,12, 1,0, 1,0, 1,0, 1,0, 1,0, 1,0
@@ -340,7 +340,7 @@ and-fg,32, $fg42, $fg42, $fg42, $fg42, $fg42, $fg42
 !hkrss-patterns,53, 4,32, 4,32, 4,32, 4,32, 4,32, 4,32
 !hkrss-patterns,54, 4,32, 4,32, 4,32, 4,32, 4,32, 4,32
 !hkrss-patterns,55, 5,12, 6,12, 5,12, 6,12, 5,12, 6,12
-!p-patterns,2, 2,15, 2,15, 3,19, 3,19, 4,23, 4,23
+!p-patterns,2, 2,14, 2,14, 3,19, 3,19, 4,23, 4,23
 !p-patterns,3, 3,41, 3,41, 3,41, 3,41, 3,41, 3,41
 !p-patterns,4, 1,1, 1,1, 1,1, 1,1, 1,1, 1,1
 !p-patterns,5, 2,6, 2,6, 2,6, 2,6, 2,6, 2,6
@@ -379,7 +379,7 @@ FG(a | Fb), 3,15, 3,15, 3,15, 3,15, 1,4
 FG(a & Fb), 2,7, 2,7, 3,9, 3,9, 1,4
 GF(a & Gb), 2,7, 2,7, 3,9, 3,9, 1,4
 GF(a | Gb), 2,7, 2,7, 3,12, 3,12, 1,4
-Ge | GF(Ge & X(c & Fd)), 4,31, 4,31, 6,39, 6,39, 2,16
+Ge | GF(Ge & X(c & Fd)), 4,30, 4,30, 6,39, 6,39, 2,16
 F(GF(b & Gc) | Ge), 3,22, 3,22, 4,26, 4,26, 1,8
 EOF
 
