@@ -22,40 +22,43 @@
 set -e
 
 cat >exp <<EOF
-parity 17;
-0 1 0 7,8;
-8 1 1 2;
+parity 18;
+0 2 0 7,8;
+8 2 1 2;
 2 3 0 11,12;
 12 3 1 2,3;
 3 2 0 13,14;
 14 2 1 2,3;
-13 2 1 1,4;
-4 1 0 8,15;
-15 1 1 5,6;
-6 1 0 8,15;
-5 2 0 16,17;
-17 2 1 2;
-16 2 1 5,6;
+13 2 1 4,5;
+5 2 0 8,17;
+17 2 1 5,6;
+6 1 0 10,18;
+18 1 1 5,6;
+10 1 1 2;
+4 1 0 15,16;
+16 1 1 2,3;
+15 1 1 4,5;
+11 3 1 4,5;
+7 2 1 0,1;
 1 1 0 9,10;
-10 1 1 2,3;
-9 1 1 1,5;
-11 3 1 1,4;
-7 1 1 1,2;
-parity 13;
-0 1 0 1,2;
+9 1 1 0,1;
+parity 15;
+0 2 0 1,2;
 2 1 1 3;
-3 3 0 5,4;
-4 2 1 12,3;
-12 2 0 5,4;
-5 1 1 6,7;
-7 1 0 9,8;
-8 3 1 12,3;
-9 1 1 11,10;
-10 2 0 9,8;
-11 1 0 9,8;
-6 1 0 13,4;
-13 1 1 6,10;
-1 1 1 6,3;
+3 3 0 4,5;
+5 2 1 6,3;
+6 2 0 4,5;
+4 1 1 7,8;
+8 2 0 10,9;
+9 3 1 6,3;
+10 2 1 11,8;
+11 1 0 12,9;
+12 1 1 11,8;
+7 1 0 13,5;
+13 1 1 7,8;
+1 2 1 14,0;
+14 1 0 15,2;
+15 1 1 14,0;
 parity 5;
 0 1 0 2,3;
 3 3 1 1;
